--- a/week2/ex1.html
+++ b/week2/ex1.html
@@ -6,21 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <ol>
-        <li>List item 1</li>
-        <li>List item 2
-    </ol>
-            <li>nested item 1</li>
-            <li>nested item 2 </li>
-            <li>nested item 3 </li>
-    </ol>
-</li>
-<li>list item 3 
-    <ol>
-        <li>nested item 1 </li>
-        <li>nested item 2 </li>
-    </ol>
-  </li>
-</ol>
+    I am learning <strong>HTML</strong> and <strong>CSS!</strong>
 </body>
 </html>
